--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="play_game">Play Game</string>
     <string name="settings">Settings</string>
     <string name="monster_phonics">Monster Phonics</string>
+    <string name="sound">Sound</string>
 </resources>
