"updated the app"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="settings">Settings</string>
     <string name="monster_phonics">Monster Phonics</string>
     <string name="sound">Sound</string>
+    <string name="read_me">Read Me</string>
 </resources>
